<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout_plan_top_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/height_analysis_item_margin"
    android:layout_marginBottom="@dimen/height_analysis_item_margin"
    android:layout_marginStart="@dimen/width_analysis_item_margin"
    android:layout_marginEnd="@dimen/width_analysis_item_margin"
    android:background="@drawable/shape_layout_white_radius_card"
    android:elevation="2dp"
    android:clickable="true"
    android:focusable="true" >

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintlayout_plan_top_viewmode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <FrameLayout
            android:id="@+id/framelayout_plan_top_add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_icon_item"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/height_analysis_mainitem_margin"
            android:layout_marginTop="@dimen/height_analysis_mainitem_margin"
            android:layout_marginBottom="@dimen/height_analysis_mainitem_margin"
            >

            <ImageView
                android:id="@+id/imageview_plan_top_add_item"
                android:layout_width="@dimen/size_all_item_image"
                android:layout_height="@dimen/size_all_item_image"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/btn_add_line" />

        </FrameLayout>



        <TextView
            android:id="@+id/textview_plan_top_viewmode_title"
            android:layout_width="@dimen/width_plan_top_add_item"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/height_analysis_mainitem_margin"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:lines="1"
            android:text="Set/Edit Target"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/framelayout_plan_top_add_item"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_plan_top_remaining_time"
            android:layout_width="@dimen/width_plan_task_time"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/height_analysis_mainitem_margin"
            android:fontFamily="sans-serif-medium"
            android:lines="1"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="16 hr" />


    </android.support.constraint.ConstraintLayout>

    <!-- Visible in edit mode -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintlayout_plan_top_editmode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/constraintlayout_plan_top_viewmode"
        app:layout_constraintStart_toStartOf="parent" >

        <!-- Set edit title and save/cancel button -->
        <!-- title -->
        <TextView
            android:id="@+id/textview_plan_top_editmode_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif-medium"
            android:lines="1"
            android:textColor="@color/color_app_default_dark_grey"
            android:text="Set a new target"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/imageview_plan_top_editmode_separationline"
            app:layout_constraintStart_toStartOf="parent"
            />

        <!-- save button -->
        <ImageView
            android:id="@+id/imageview_plan_top_editmode_save"
            android:layout_width="@dimen/width_set_target_send_button"
            android:layout_height="@dimen/height_set_target_send_button"

            android:padding="@dimen/padding_set_target_send_button"
            android:layout_marginEnd="@dimen/margin_end_set_target_send_button"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/btn_check" />

        <!-- cancel button -->
        <ImageView
            android:id="@+id/imageview_plan_top_editmode_cancel"
            android:layout_width="@dimen/width_set_target_send_button"
            android:layout_height="@dimen/height_set_target_send_button"
            android:padding="@dimen/padding_set_target_send_button"
            android:layout_marginEnd="@dimen/margin_end_set_target_send_button"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toStartOf="@+id/imageview_plan_top_editmode_save"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/btn_cancel" />

        <ImageView
            android:id="@+id/imageview_plan_top_editmode_separationline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="@dimen/margin_end_set_target_send_button"
            android:layout_marginBottom="8dp"
            android:background="@color/color_app_default_dark_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageview_plan_top_editmode_save" />

        <!-- Set target content -->


        <FrameLayout
            android:id="@+id/framelayout_plan_top_editmode_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_task_icon"
            android:padding="@dimen/padding_icon_item"
            android:layout_marginStart="@dimen/height_analysis_mainitem_margin"
            android:layout_marginTop="@dimen/height_analysis_mainitem_margin"
            android:layout_marginBottom="@dimen/height_analysis_mainitem_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageview_plan_top_editmode_separationline"
            app:layout_constraintBottom_toTopOf="@+id/constraintlayout_settarget_adjust_costtime"
            android:clickable="true"
            android:focusable="true"
            >

            <ImageView
                android:id="@+id/imageview_plan_top_editmode_icon"
                android:layout_width="@dimen/size_all_item_image"
                android:layout_height="@dimen/size_all_item_image"
                android:src="@drawable/btn_add_line"
                />

        </FrameLayout>


        <!-- task -->
        <TextView
            android:id="@+id/textview_plan_top_editmode_tasktitle"
            style="@style/TextViewEditTitle"
            android:layout_marginStart="@dimen/height_analysis_mainitem_margin"
            app:layout_constraintStart_toEndOf="@+id/framelayout_plan_top_editmode_icon"
            app:layout_constraintTop_toTopOf="@+id/framelayout_plan_top_editmode_icon"
            android:text="Task"
            tools:text="Task" />

        <TextView
            android:id="@+id/edittext_plan_top_editmode_task"
            android:layout_width="@dimen/width_set_target_item"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/height_analysis_mainitem_margin"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:lines="1"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/framelayout_plan_top_editmode_icon"
            app:layout_constraintTop_toBottomOf="@+id/textview_plan_top_editmode_tasktitle"
            android:text="@string/default_task_hint"
            android:clickable="true"
            android:focusable="true" />

        <!-- category -->
        <TextView
            android:id="@+id/textview_plan_top_editmode_categorytitle"
            style="@style/TextViewEditTitle"
            android:layout_marginStart="@dimen/height_analysis_mainitem_margin"
            app:layout_constraintStart_toEndOf="@+id/framelayout_plan_top_editmode_icon"
            app:layout_constraintBottom_toBottomOf="@+id/framelayout_plan_top_editmode_icon"
            android:text="@string/default_category_title"
            tools:text="@string/default_category_title" />

        <TextView
            android:id="@+id/textview_plan_top_editmode_category"
            style="@style/TextViewCardCategoryLabel"
            android:layout_marginTop="@dimen/height_analysis_category_margin_top"
            android:layout_marginStart="@dimen/height_analysis_mainitem_margin"
            android:text="@string/default_task_hint_categroy"
            app:layout_constraintStart_toEndOf="@+id/framelayout_plan_top_editmode_icon"
            app:layout_constraintBottom_toBottomOf="@+id/framelayout_plan_top_editmode_icon"
            android:clickable="true"
            android:focusable="true"
            />

        <!-- seekbar to set time target  -->
        <TextView
            android:id="@+id/textview_plan_set_target_cost_time_title"
            style="@style/TextViewEditTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_plan_top_editmode_category"
            android:text="Time: " />


        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintlayout_plan_set_target_cost_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/framelayout_plan_top_editmode_icon"
            android:clickable="true"
            android:focusable="true"
            >

            <TextView
                android:id="@+id/textview_plan_set_target_cost_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/height_analysis_mainitem_margin"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:lines="1"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="0 hr"
                tools:text="0 hr"
                />

            <ImageView
                android:id="@+id/imageview_plan_set_target_cost_time"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginEnd="@dimen/height_analysis_mainitem_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_plan_set_target_cost_time"
                android:background="@color/color_app_default_dark_grey"
                />

        </android.support.constraint.ConstraintLayout>


        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintlayout_settarget_adjust_costtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintTop_toBottomOf="@+id/framelayout_plan_top_editmode_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <SeekBar
                android:id="@+id/seekbar_plan_set_target_cost_time_daily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:max="1440"
                android:progress="0"
                android:maxHeight="10dp"
                android:minHeight="10dp"
                android:thumb="@drawable/selector_seekbar_thumb"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <SeekBar
                android:id="@+id/seekbar_plan_set_target_cost_time_weekly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:max="10080"
                android:progress="0"
                android:maxHeight="10dp"
                android:minHeight="10dp"
                android:thumb="@drawable/selector_seekbar_thumb"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
