<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout_plan_main_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/height_analysis_item_margin"
    android:layout_marginBottom="@dimen/height_analysis_item_margin"
    android:layout_marginStart="@dimen/width_analysis_item_margin"
    android:layout_marginEnd="@dimen/width_analysis_item_margin"
...
    android:elevation="2dp"
    android:clickable="true"
    android:focusable="true" >


    <FrameLayout
        android:id="@+id/framelayout_plan_task_delete_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_task_icon"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
        android:layout_marginStart="@dimen/height_analysis_mainitem_margin"
        android:layout_marginTop="@dimen/height_analysis_mainitem_margin"
        android:layout_marginBottom="@dimen/height_analysis_mainitem_margin"
        >

        <ImageView
            android:id="@+id/imageview_plan_task_delete_hint"
            android:layout_width="@dimen/size_all_item_image"
            android:layout_height="@dimen/size_all_item_image"
            android:adjustViewBounds="false"
            android:scaleType="fitXY"
            android:visibility="visible"
            android:layout_margin="6dp"
...
