...
        android:icon="@drawable/page_stopwatch_timer"
        android:title="@string/page_title_trace"
        android:checked="true"
        />

    <item
        android:id="@+id/navigation_plan"
        android:icon="@drawable/page_plan"
        android:title="@string/page_title_plan"
        />

    <item
        android:id="@+id/navigation_analysis"
...
