<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".task.TaskListFragment">

    <LinearLayout
        android:id="@+id/linearlayout_tasklist_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_plan_period"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@android:color/white" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="linearlayout_tasklist_top"
            android:textSize="14dp" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_tasklist"
        style="@style/RecyclerViewLinearCard"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout_tasklist_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>